<resources  xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" >
    <string name="application_name">MahlWerk</string>

    <string name="tasks">Tasks</string>
    <string name="map">Map</string>
    <string name="orders">Orders</string>

    <string name="myTasks">My Tasks</string>
    <string name="openTasks">Open Tasks</string>
    <string name="jobs">Jobs</string>
    <string name="suggestedJobs">Suggested Jobs</string>
    <string name="information">Information</string>
    <string name="materials">Materials</string>
    <string name="tools">Tools</string>
    <string name="tasksHistory">Tasks History</string>

    <string name="status">Status: %1s</string>
    <string name="quantity">%1d x</string>

    <string name="route">Route</string>
    <string name="show_on_map">Show On Map</string>

    <string name="openTask">Open Task</string>
    <string name="schedule">Schedule</string>
    <string name="showRoute">Show Route</string>

    <string name="contentDescription_status">Status</string>
    <string name="contentDescription_location">Location</string>
    <string name="location">Location</string>
    <string name="customer">Customer</string>
    <string name="order">Order</string>
    <string name="finalReport">Final Report</string>
    <string name="description">Description</string>
    <string name="notifications">Notifications</string>
    <string name="signOut">Sign Out</string>
    <string name="map_type">Map Type</string>
    <string name="open">Open</string>
    <string name="scheduled">Scheduled</string>
    <string name="predictedTime">Predicted Time: %1$.1f hour(s)</string>
    <string name="machine">Machine: %s</string>

    <string name="status_open">Open</string>
    <string name="status_active">Active</string>
    <string name="status_scheduled">Scheduled</string>
    <string name="status_done">Done</string>

    <string name="streetHouseNumber">%s %s</string>
    <string name="postalCodeTown">%s %s</string>

    <string name="status_notSent">Not Sent</string>
    <string name="status_sent">Sent</string>
    <string name="status_approved">Approved</string>

    <string name="changeStatusTitle">Change Status</string>
    <string name="changeStatus">Change Status to: %s?</string>

    <string name="emailPhone">Email: %s\nPhone: %s</string>
    <string name="task">Task</string>
    <string name="sum">Sum: %1$.1f hour(s)</string>
    <string name="hours">%1$.1f hour(s)</string>
    <string name="welcomeScreen">Willkommen bei MahlWerk!</string>
    <string name="profile">Profile</string>
    <string name="mapTypeNormal">Normal</string>
    <string name="mapTypeSatellite">Satellite</string>
    <string name="mapTypeTerrain">Terrain</string>
    <string name="mapTypeHybrid">Hybrid</string>
    <string name="open_in_maps">Open in Maps</string>
    <string name="serviceTechnician">Service Technician</string>

    <string name="error_taskTaken">Task already assigned</string>
    <string name="error_taskTakenDetail">Sorry, this task is already assigned to another user.</string>
    <string name="error_changeStatus">Status change failed</string>
    <string name="error_maxActive">Status change failed</string>
    <string name="error_maxActiveDetail">Only one active task is allowed at a time.</string>
    <string name="error_changeStatusDetail">The status could not be changed. Please try again later.</string>
    <string name="noItems_job">No jobs</string>
    <string name="noItems_task">No tasks</string>
    <string name="noItems_material">No materials</string>
    <string name="noItems_myTasks">No assigned tasks</string>
    <string name="noItems_openTasks">No open tasks</string>
    <string name="noItems_historyTasks">No completed tasks</string>
    <string name="noItems_suggestedJobs">No suggested jobs</string>
</resources>
