<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.TaskInformationFragment">

        <ImageView
            android:id="@+id/imageView_taskInformation_location"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/contentDescription_location"
            android:src="@drawable/ic_location_on_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_taskInformation_street"
            app:layout_constraintBottom_toBottomOf="@+id/textView_taskInformation_country" />

        <TextView
            android:id="@+id/textView_taskInformation_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_taskInformation_location"
            tools:text="Building 21" />

        <TextView
            android:id="@+id/textView_taskInformation_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_taskInformation_street"
            tools:text="Denninger Strasse 26" />

        <TextView
            android:id="@+id/textView_taskInformation_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_taskInformation_town"
            tools:text="Munich" />

        <View
            android:id="@+id/divider_taskInformation_1"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/noteFormCell_taskInformation_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_taskInformation_show" />

        <View
            android:id="@+id/divider_taskInformation_2"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/view_taskInformation_customer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteFormCell_taskInformation_notes" />

        <View
            android:id="@+id/divider_taskInformation_3"
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_taskInformation_customer" />

        <com.sap.cloud.mobile.fiori.formcell.ButtonFormCell
            android:id="@+id/button_taskInformation_route"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/route"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_taskInformation_show"
            app:layout_constraintTop_toBottomOf="@id/textView_taskInformation_country" />

        <com.sap.cloud.mobile.fiori.formcell.ButtonFormCell
            android:id="@+id/button_taskInformation_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/show_on_map"
            app:layout_constraintEnd_toStartOf="@+id/button_taskInformation_route"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_taskInformation_country" />

        <com.sap.cloud.mobile.fiori.formcell.NoteFormCell
            android:id="@+id/noteFormCell_taskInformation_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            app:key="@string/description"
            app:isEditable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_taskInformation_show" />

        <include
            android:id="@+id/view_taskInformation_location"
            layout="@layout/item_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/view_taskInformation_customer"
            layout="@layout/item_task_information"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintBottom_toTopOf="@+id/divider_taskInformation_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_taskInformation_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>